--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "redux",
     "typescript",
     "boilerplate",
-    "todomvc"
+    "search"
   ],
   "main": "index.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.5",
     "@types/redux-actions": "^2.6.1",
+    "@types/styled-components": "^5.1.9",
     "@types/webpack": "^4.41.0",
     "@types/webpack-env": "^1.15.1",
     "babel-loader": "^8.0.6",
@@ -63,10 +64,12 @@
     "classnames": "^2.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-feather": "^2.0.9",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1"
   }
 }
